--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "mongoose-aggregate-paginate": "^2.0.2",
+    "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.3",
